For KParts, read Scrollback File Location from konsolerc

Apps using KonsolePart will now use Konsole's setting for the
scrollback file location.  There is also a check in the apprc for this
info.
Note that for the 2nd option "Use user specific location", the app
name will be used (e.g. /home/user/.cache/yakuake).

BUG: 369496
(cherry picked from commit a70ff34d28e061bec33513c21fa710f426721fd0)